welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: ')' expected but ';' found.
	 (nbPas= nbPas + 1;)
                          ^Variables:5: error: illegal start of statement
	 (nbPas= nbPas + 1;)
                           ^